# mcp-fortios-server

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  WORKFLOW_COMPARISON.md  docker-compose.yml  health_check.py  k8s-deployment.yaml  pyproject.toml
.github/workflows/: dockerhub.yml  forticnapp-iac.yml  forticnapp-sca-sast.yml
app/: __init__.py  fortios_client.py  server.py  tools.py
examples/: __init__.py  mcp_client.py  usage_examples.py
scripts/: release.sh
tests/: test_basic.py  test_integration.py  test_validation.py
