[project]
name = "mcp-fortios"
version = "1.0.3"
description = "Model Context Protocol (MCP) server for FortiOS firewall management and operations"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "FortiDemos Cloud", email = "info@fortidemoscloud.com"}
]
maintainers = [
    {name = "FortiDemos Cloud", email = "info@fortidemoscloud.com"}
]
keywords = ["mcp", "fortios", "fortigate", "firewall", "model-context-protocol", "api"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking :: Firewalls",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers"
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.13.0.2",
    "requests>=2.32.5",
    "starlette>=0.50.0",
    "urllib3>=2.5.0",
    "uvicorn>=0.38.0",
]

[project.urls]
Homepage = "https://github.com/fortidemoscloud/fortios-mcp-server"
Repository = "https://github.com/fortidemoscloud/fortios-mcp-server"
Documentation = "https://github.com/fortidemoscloud/fortios-mcp-server#readme"
Issues = "https://github.com/fortidemoscloud/fortios-mcp-server/issues"
Changelog = "https://github.com/fortidemoscloud/fortios-mcp-server/releases"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "types-requests>=2.32.4.20250913",
    "types-urllib3>=1.26.25.14",
]
